oqct-app/main/default/objects/DC_Related_Result__c/DC_Related_Result__c.object-meta.xml
<CustomObject>
    <description>This object captures the results of child or related objects for every attempt in the process</description>
    <label>DC-Related Result</label>
    <nameField>
        <displayFormat>DC-Rel-Res-{00000000}</displayFormat>
        <label>DC-Related Result Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DC-Related Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>