oqct-app/main/default/objects/DC_Related_Result__c/fields/DC_Result__c.field-meta.xml
<CustomField>
    <fullName>DC_Result__c</fullName>
    <description>The result record associated with which captures the result of the parent object</description>
    <inlineHelpText>The result record associated with which captures the result of the parent object</inlineHelpText>
    <label>DC-Result</label>
    <referenceTo>DC_Result__c</referenceTo>
    <relationshipLabel>DC-Related Results</relationshipLabel>
    <relationshipName>DC_Related_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>