oqct-app/main/default/objects/DC_Related_Result__c/fields/Is_Related_Job_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Related_Job_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the processing of this child object is completed</description>
    <inlineHelpText>True if the processing of this child object is completed</inlineHelpText>
    <label>Is Related Job Completed</label>
    <type>Checkbox</type>
</CustomField>