oqct-app/main/default/objects/DC_Related_Result__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <description>The operation/action performed on the records</description>
    <inlineHelpText>The operation/action performed on the records</inlineHelpText>
    <label>Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Clean_Processes</valueSetName>
    </valueSet>
</CustomField>