oqct-app/main/default/objects/DC_Related_Result__c/fields/Related_Field_History_Deletion_Status__c.field-meta.xml
<CustomField>
    <fullName>Related_Field_History_Deletion_Status__c</fullName>
    <description>Field History Deletion Status of Related Object</description>
    <inlineHelpText>Field History Deletion Status of Related Object</inlineHelpText>
    <label>Related Field History Deletion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Field_History_Deletion_Status</valueSetName>
    </valueSet>
</CustomField>