oqct-app/main/default/objects/DC_Related_Result__c/fields/Related_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Name__c</fullName>
    <description>The name of the child object of the corresponding Master object which was masked/deleted/archived when Master object records are masked/deleted/archived</description>
    <inlineHelpText>The name of the child object of the corresponding Master object which was masked/deleted/archived when Master object records are masked/deleted/archived</inlineHelpText>
    <label>Related Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>