oqct-app/main/default/objects/DC_Related_Result__c/fields/Related_Status__c.field-meta.xml
<CustomField>
    <fullName>Related_Status__c</fullName>
    <description>The status of all the records of [Related Object Name] which are associated with the parent Master object. The picklist takes its values from the Global Picklist ‘Data Clean Treatment Status’</description>
    <formula>IF(
    !Is_Related_Job_Completed__c,
    &apos;Pending&apos;,
    IF(
        AND(Total_Related_Success__c &gt; 0, Total_Related_Failure__c = 0),
        &apos;Success&apos;,
        IF(
            AND(Total_Related_Success__c = 0, Total_Related_Failure__c &gt; 0),
            &apos;Failed&apos;,
            IF(
                AND(Total_Related_Success__c &gt; 0, Total_Related_Failure__c &gt; 0),
                &apos;Partial Success&apos;,
                IF(
                    AND(Total_Related_Success__c = 0, Total_Related_Failure__c = 0),
                    &apos;No Records Found&apos;,
                    null
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The status of all the records of [Related Object Name] which are associated with the parent Master object. The picklist takes its values from the Global Picklist ‘Data Clean Treatment Status’</inlineHelpText>
    <label>Related Status</label>
    <type>Text</type>
</CustomField>