oqct-app/main/default/objects/DC_Related_Result__c/fields/Total_Related_Failure__c.field-meta.xml
<CustomField>
    <fullName>Total_Related_Failure__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total number records of [Related Object Name] which are associated with the parent Master object which failed during the operation</description>
    <inlineHelpText>The total number records of [Related Object Name] which are associated with the parent Master object which failed during the operation</inlineHelpText>
    <label>Total Related Failure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>